Add important warning message

--- a/slides/index.html
+++ b/slides/index.html
@@ -65,6 +65,8 @@
           <p><em>Problem:</em> Given a string $s$ and nonnegative integer $k$ find the longest (or any longest, if multiple) substring of $s$ such that there are at most $k$ distinct characters.
 
           <p>For example, $f(s=\text{aabcdef}, k=3) = \text{aabc}$</p>
+
+          <small>For simplicity we'll use the brute force solution. Don't try this during an interview.</small>
         </section>
 
         <section>
