--- a/slides/index.html
+++ b/slides/index.html
@@ -138,7 +138,7 @@
         </section>
 
         <section>
-          <h2>Fibbonacci</h2>
+          <h2>Fibonacci</h2>
           <div class="left">$$f(0)=0 \\ f(1)=1 \\ f(n)=f(n-1)+f(n-2)$$</div>
 
           <div class="right"><pre class="javascript"><code data-trim>
@@ -166,7 +166,7 @@
         </section>
 
         <section>
-          <h2>Fibbonacci</h2>
+          <h2>Fibonacci</h2>
           <div class="left">$$f(0)=0 \\ f(1)=1 \\ f(n)=f(n-1)+f(n-2)$$</div>
 
           <div class="right"><pre class="javascript"><code data-trim>
@@ -187,7 +187,7 @@
         </section>
 
         <section>
-          <h2>Factorial</h2>
+          <h2>Fibonacci</h2>
 
           <div class="left">$$f(0)=0 \\ f(1)=1 \\ f(n)=f(n-1)+f(n-2)$$</div>
 
