--- a/slides/index.html
+++ b/slides/index.html
@@ -21,7 +21,7 @@
 
         <section>
           <h1>Introduction to Web Development: Frontend</h1>
-          <!-- Put in HTML5, CSS3, JS logos! -->
+          <small>Where we get a bit... <code>&lt;meta&gt;</code></small>
         </section>
 
         <section>
