--- a/slides/index.html
+++ b/slides/index.html
@@ -28,7 +28,7 @@
           <h2>Follow Along</h2>
           <ul>
             <li>Repo: <a href="https://github.com/hemangandhi/intro-to-web-dev">github.com/hemangandhi/intro-to-web-dev</a> (clone me!)</li>
-            <li>Slides: <a href="https://www.threedot14.com/intro-to-functional/slides/">threedot14.com/intro-to-functional/slides</a></li>
+            <li>Slides: <a href="https://hemangandhi.github.io/intro-to-web-dev/slides/index.html#/">https://hemangandhi.github.io/intro-to-web-dev/slides/index.html#/</a></li>
             <li>All code examples should (hopefully) work. Try <a href="https://codepen.io/" target="_blank">codepen.io</a>.</li>
           </ul>
         </section>
