--- a/slides/index.html
+++ b/slides/index.html
@@ -297,6 +297,11 @@ window.addEventListener("load", function () {
 
             </code></pre>
         </section>
+        <section>
+            <h2>That's a quick overview...</h2>
+            <h2 class="fragment">...but please ask for more!</h2>
+            <h2 class="fragment">And come to HackRU! <a href="https://hackru.org">Don't forget to Register!</a></h2>
+        </section>
       </div>
     </div>
   </body>
