no game, better title slide

--- a/slides/index.html
+++ b/slides/index.html
@@ -21,7 +21,7 @@
 
         <section>
           <h1>Introduction to Web Development: Frontend</h1>
-          <small>Where we get a bit... <code>&lt;meta&gt;</code></small>
+          <small class="fragment">Where we get a bit... <code class="fragment">&lt;meta&gt;</code></small>
         </section>
 
         <section>
